
tig master
----------

Improvements:

 - Display repository references in the sorted order: tags, heads,
   tracked remotes, remotes.
 - Add bash completion for blame.

Bug fixes:

 - Separate blame revision and file argument by "--" to avoid problems.
 - Main view: fix redrawing of the last commit wrt. the revision graph.
 - Fix waiting for input after executing a run request in pager mode.

tig-0.12.1
----------

Improvements:

 - Status view: revert uncommitted diff chunks and unstaged files with
   changes. Bound to '!' by default.
 - Main view: use --topo-order also when rev-list arguments are given on
   the command line.
 - Log view: support for refreshing.

Bug fixes:

 - Status view: use ls-files' --exclude-standard so user specific ignore
   rules are effective. The option was added in git version 1.5.4.
 - Stage view: fix assertion failure triggered when updating while
   status view is not displayed.
 - Help view: avoid confusion by showing "(no key)" instead of "'?'" for
   unbound requests.
 - Reload repository references when refreshing the main (and log) view.
 - Do not maximize views when refreshing.

tig-0.12
--------

Improvements:

 - F5 also refreshes the current view.
 - Allow line graphics to be disabled with new line-graphics option.
 - Main view: also include the reference names when searching.
 - Main view: support for refreshing.
 - Main view: disable boundary commits by default. Use --boundary when
   they should be shown. (Debian bug 498628)
 - Stage view: add stage-next action to jump to next diff chunk that can
   be staged. By default bound to '@'.
 - Configure: check for the ncurses header files.
 - Add author-width option to costumize the width of the author column.
   For example, put the following in ~/.tigrc: set author-width = 10

Bug fixes:

 - Fix regression when staging all diff chunks in a section.
 - Bind the maximize view action to 'O'; it conflicted with the
   keybinding to launch the merge tool in the status view.